<resources>
    <string name="app_name">CouponVerse</string>
    <string name="appname">CouponVerse</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="passwordstr">Password</string>
    <string name="rememberpwd">Remember password</string>
    <string name="forgotpw">Forgot password?</string>
    <string name="altLogins">or connect with</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="go_back">Go Back</string>
    <string name="recoverPw">Recover Password</string>
    <string name="email_recov_text">If the entered address is registered in our database, a recovery mail will be sent shortly.</string>
    <string name="communities">Communities</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="view_coupons">My Coupons</string>
    <string name="settings">Settings</string>
    <string name="communities_search">Search For communities</string>
    <string name="server_api_default_baseurl">http://10.0.2.2:5073</string>
    <string name="select_a_category">Select a Category</string>
    <string name="coupons_about_to_expire">Some coupons are about to expire!</string>
    <string name="community_name">Community Name</string>
    <string name="default_community">Default Community Name</string>
    <string name="title">Coupon Title</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="description">Description</string>
    <string name="code_value">Coupon Code</string>
    <string name="extract_from_text">Extract from Text</string>
    <string name="extract_from_text_prompt">Already have a coupon text/message? You can also</string>
    <string name="add_new_coupon">Add New Coupon</string>
    <string name="extract_coupon">Extract Coupon</string>
    <string name="add_coupon_manually_prompt">Don\'t have any text? you can manually</string>
    <string name="search_users">Search for users</string>
    <string name="default_user">Default User</string>
    <string name="browse_users">Browse Users</string>
    <string name="default_coupon_title">Default Coupon Title</string>
    <string name="defaultcoupondisplay">DefaultCouponDisplay</string>
    <string name="expires_in">Expires:\u0020</string>
    <string name="expiration_field">Expiration</string>
    <string name="default_date">1/1/1970</string>
    <string name="update_user">Update User</string>
    <string name="user_picture">User Picture</string>
    <string name="app_settings">App Settings</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="server_url_default_hint">Server URL (default: http://10.0.2.2:5073)</string>
    <string name="server_url_change_warning">Warning: the app needs to be restarted for this change to take effect</string>
    <string name="update_app_button">Update App</string>
    <string name="user_settings_header">User Settings</string>
    <string name="username">Username</string>
    <string name="group_members">Group Members</string>
    <string name="star">star_icon</string>
    <string name="filter">Filter Products</string>
    <string name="edit_coupon">Edit Coupon</string>
    <string name="copy_text">Copy Text</string>
    <string name="start_chat">Start Chat</string>
    <string name="delete_coupon">Delete Coupon</string>
    <string name="browse_communities">Browse Communities</string>
    <string name="your_communities">Your Communities</string>
    <string name="edit_group">Edit Group</string>
    <string name="leave_group">Leave Group</string>
    <string name="recentGroupMessage">Last message sent in the community goes here!</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_new_community_name">Write here the new community name</string>
    <string name="community_icon">Community Icon</string>
    <string name="admin">Admin</string>
    <string name="remove">Remove</string>
    <string name="my_communities">My Communities</string>
    <string name="sort">Sort</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="ml_recommendation_model_explore_products">ML Recommendation Model\nExplore Products!</string>
    <string-array name="category_array">
        <item>Arts &amp; Crafts</item>
        <item>Automotive</item>
        <item>Baby &amp; Kids</item>
        <item>Beauty &amp; Personal Care</item>
        <item>Clothing &amp; Accessories</item>
        <item>Electronics &amp; Computers</item>
        <item>Entertainment</item>
        <item>Food &amp; Restaurants</item>
        <item>Home &amp; Kitchen</item>
        <item>Industrial &amp; Scientific</item>
        <item>Sports &amp; Fitness</item>
        <item>Toys &amp; Games</item>
        <item>Other (Custom)</item>
    </string-array>
</resources>