<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/coupon_background">

    <TextView
        android:id="@+id/couponTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_coupon_title"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/couponCode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:text="@string/defaultcoupondisplay"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expires_in"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/couponExpiryStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiration_field"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/couponExpiryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_date"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginStart="4dp" />
    </LinearLayout>
</LinearLayout>